# routes/denuncia/by_id.py
@@ -70,7 +70,9 @@ def get_denuncia_by_id(current_user, denuncia_id):
             if deposito:
                 deposito = deposito.copy()  # Faz uma cópia para não alterar o original
                 deposito.pop('denuncia_id', None)  # Remove a chave se existir
-            denunc['deposito'] = deposito
+
+            # Adiciona o depósito ao dicionário da denúncia
+            # denunc['deposito'] = deposito
 
     except Exception as e:
         conn.rollback()
